--- a/static/stream.html
+++ b/static/stream.html
@@ -5,6 +5,9 @@
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="js/jquery.min.js"></script>
+    <script src="js/icheck.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/site.css">
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -66,13 +69,13 @@
           </div>
           <br>
           <div class="options">
-            <h5>Options:</h5>
+            <h5>Options: <i class="fa fa-cog"></i></h5>
             Teachers only: 
             <label class="toggle">
             <input type="checkbox" >
             <span class="handle"></span>
             </label><br>
-            Teachers only: 
+            Questions only: 
             <label class="toggle">
             <input type="checkbox" >
             <span class="handle"></span>
@@ -85,7 +88,7 @@
         <ol class="breadcrumb" style="margin-top: 20px">
           <li><a href="#">Home</a></li>
           <li><a href="#">Math 101</a></li>
-          <li class="active">Lecture #2</li>
+          <li class="active">Stream #2</li>
         </ol>
 <h2>Math 101 Stream</h2>
 <div class="row">
