Fixes on fixes bitches

--- a/static/stream.html
+++ b/static/stream.html
@@ -23,6 +23,9 @@
     img{
       width: 50px;
     }
+    .classes-btn{
+        margin-top: 90px;
+      }
     .options{
       background: #F0F0F0;
       margin-top: 100px;
