--- a/static/home.html
+++ b/static/home.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="img/icon.png"/>
 	<link rel="stylesheet" href="css/site.css">
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -21,7 +22,7 @@
 		<!-- Header -->
 		<header>
 			<div class="row">
-				<div class="col-md-8"><h3>flipped.</h3></div>
+				<div class="col-md-8"><h1>flipped.</h3></div>
 				<div class="col-md-4" style="padding-top: 30px">
 					<div class="btn-group">
                   <button type="button" class="btn btn-primary btn-lg">Student login.</button>
