--- a/static/lecture.html
+++ b/static/lecture.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/png" href="img/icon.png"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/site.css">
     <!--[if lt IE 9]>
@@ -40,7 +41,7 @@
     <!-- Header -->
     <header>
      <div class="row">
-      <div class="col-md-9"><h3>flipped.</h3></div>
+      <div class="col-md-9"><h1>flp.</h1></div>
       <div class="col-md-3" style="padding-top: 30px">
 					<div class="btn-group">
             <button type="button" class="btn btn-primary btn-lg"><i class="fa fa-home"></i></button>
