Fixed some stuff

--- a/static/lecture.html
+++ b/static/lecture.html
@@ -41,7 +41,7 @@
     <!-- Header -->
     <header>
      <div class="row">
-      <div class="col-md-9"><h1>flp.</h1></div>
+      <div class="col-md-9"><h1>flipped.</h1></div>
       <div class="col-md-3" style="padding-top: 30px">
 					<div class="btn-group">
             <button type="button" class="btn btn-primary btn-lg"><i class="fa fa-home"></i></button>
