--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<script src="bower_components/angular-route/angular-route.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/controllers.js"></script>
+  <script src="js/factories/authFactory.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/site.css">
     <!--[if lt IE 9]>
